add_executable(${PROJECT_NAME}
    Array1D_test.cpp
    Array2D_test.cpp
    AuxiliaryField_test.cpp
    BasicTSAdapt_test.cpp
    BndJacobianFunc_test.cpp
    BndResidualFunc_test.cpp
    BoundaryCondition_test.cpp
    BoxMesh_test.cpp
    CallStack_test.cpp
    ConstantAuxiliaryField_test.cpp
    ConstantIC_test.cpp
    CSVOutput_test.cpp
    DenseMatrix_test.cpp
    DenseMatrixSymm_test.cpp
    DenseVector_test.cpp
    DependencyEvaluator_test.cpp
    DependencyGraph_test.cpp
    DirichletBC_test.cpp
    Error_test.cpp
    EssentialBC_test.cpp
    ExodusIIMesh_test.cpp
    ExodusIIOutput_test.cpp
    ExplicitFELinearProblem_test.cpp
    ExplicitFVLinearProblem_test.cpp
    Factory_test.cpp
    FEBoundary1D_test.cpp
    FEBoundary2D_test.cpp
    FEBoundary3D_test.cpp
    FEIntegration_test.cpp
    FEMatrices_test.cpp
    FENonlinearProblem_test.cpp
    FENonlinearProblemJFNK_test.cpp
    FEGeometry_test.cpp
    FEOps_test.cpp
    FEShapeFns_test.cpp
    FEVolumes_test.cpp
    FunctionAuxiliaryField_test.cpp
    FunctionEvaluator_test.cpp
    FunctionIC_test.cpp
    GodzillaApp_test.cpp
    GTestFENonlinearProblem.cpp
    GTest2FieldsFENonlinearProblem.cpp
    GTestImplicitFENonlinearProblem.cpp
    GmshMesh_test.cpp
    GYMLFile_test.cpp
    HashMap_test.cpp
    ImplicitFENonlinearProblem_test.cpp
    IndexSet_test.cpp
    InitialCondition_test.cpp
    JacobianFunc_test.cpp
    L2Diff_test.cpp
    Label_test.cpp
    LinearInterpolation_test.cpp
    LinearProblem_test.cpp
    LineMesh_test.cpp
    Logger_test.cpp
    Matrix_test.cpp
    Mesh_test.cpp
    MeshPartitioningOutput_test.cpp
    NaturalBC_test.cpp
    NaturalRiemannBC_test.cpp
    NeumannProblem_test.cpp
    NonlinearProblem_test.cpp
    Numerics_test.cpp
    Object_test.cpp
    Output_test.cpp
    Parameters_test.cpp
    ParsedFunction_test.cpp
    PerfLog_test.cpp
    PiecewiseConstant_test.cpp
    PiecewiseLinear_test.cpp
    PrintInterface_test.cpp
    Problem_test.cpp
    Quadrature_test.cpp
    Random_test.cpp
    RectangleMesh_test.cpp
    Registry_test.cpp
    ResidualFunc_test.cpp
    Section_test.cpp
    Terminal_test.cpp
    TimeSteppingAdaptor_test.cpp
    Types_test.cpp
    UnstructuredMesh_test.cpp
    Utils_test.cpp
    Validation_test.cpp
    ValueFunctional_test.cpp
    Vector_test.cpp
    VTKOutput_test.cpp
    WeakForm_test.cpp
    main.cpp
)
target_code_coverage(${PROJECT_NAME})
target_sanitization(${PROJECT_NAME})

target_include_directories(
    ${PROJECT_NAME}
    PUBLIC
        ${PROJECT_SOURCE_DIR}/include
        ${CMAKE_BINARY_DIR}
        ${CMAKE_SOURCE_DIR}/include
        ${CMAKE_SOURCE_DIR}/contrib
    PRIVATE
        ${PETSC_INCLUDE_DIR}
)

target_link_libraries(
    ${PROJECT_NAME}
    PUBLIC
        godzilla
        gtest_main
        gmock_main
    PRIVATE
        ${PETSC_LIBRARY}
)
if (GODZILLA_WITH_MPI)
    target_link_libraries(${PROJECT_NAME} PRIVATE MPI::MPI_CXX)
endif()

if (DEFINED ENV{CONDA_PREFIX})
    set_target_properties(${PROJECT_NAME} PROPERTIES BUILD_RPATH $ENV{CONDA_PREFIX}/lib)
endif()
